supervisor update and token expire fix
